# msxrom2vhd

./: .gitignore  Makefile  README.md  configure  configure.ac  flake.nix  main.c
.github/workflows/: deploy.yml
src/: Makefile.am  main.c
static/: AUTOEXEC.BAT
webapp/: default.nix  index.html
